==> swkhitorie/gpmx/stm32/libs/drivers/drv_uart.c <==
#include "drv_uart.h"

void drv_uart_init(uint8_t num, struct drv_uart_t *obj,
                    uint8_t tx_selc, uint8_t rx_selc,
                    struct drv_uart_attr_t *com_attr,
                    struct drv_uart_dma_attr_t *txdma_attr,
                    struct drv_uart_dma_attr_t *rxdma_attr)
{
    USART_TypeDef *uart_array[DRV_UART_PERIPHAL_NUM] = {
        USART1, USART2, USART3, 
#if (BSP_CHIP_RESOURCE_LEVEL > 1)
        UART4, UART5,  USART6, UART7,  UART8
#endif // End With Define BSP_CHIP_RESOURCE_LEVEL
    };
	IRQn_Type uart_irq_array[DRV_UART_PERIPHAL_NUM] = {
        USART1_IRQn, USART2_IRQn, USART3_IRQn, 
#if (BSP_CHIP_RESOURCE_LEVEL > 1)
        UART4_IRQn, 
        UART5_IRQn, USART6_IRQn, UART7_IRQn, UART8_IRQn
#endif // End With Define BSP_CHIP_RESOURCE_LEVEL
    };
#if defined (DRV_BSP_F4) || defined (DRV_BSP_H7)
	DMA_Stream_TypeDef *uart_txdma_stream[DRV_UART_PERIPHAL_NUM] = {
        DMA1_Stream0, DMA1_Stream1, DMA1_Stream2, DMA1_Stream3,
        DMA1_Stream4, DMA1_Stream5, DMA1_Stream6, DMA1_Stream7
    };
	uint8_t uart_txdma_request[DRV_UART_PERIPHAL_NUM] = {
        DMA_REQUEST_USART1_TX, DMA_REQUEST_USART2_TX, DMA_REQUEST_USART3_TX, 
		DMA_REQUEST_UART4_TX, DMA_REQUEST_UART5_TX, DMA_REQUEST_USART6_TX, 
        DMA_REQUEST_UART7_TX, DMA_REQUEST_UART8_TX
    };
    IRQn_Type uart_txdma_irq[DRV_UART_PERIPHAL_NUM] = {
        DMA1_Stream0_IRQn, DMA1_Stream1_IRQn, DMA1_Stream2_IRQn, DMA1_Stream3_IRQn,
        DMA1_Stream4_IRQn, DMA1_Stream5_IRQn, DMA1_Stream6_IRQn, DMA1_Stream7_IRQn
    };

	DMA_Stream_TypeDef *uart_rxdma_stream[DRV_UART_PERIPHAL_NUM] = {
        DMA2_Stream0, DMA2_Stream1, DMA2_Stream2, DMA2_Stream3,
        DMA2_Stream4, DMA2_Stream5, DMA2_Stream6, DMA2_Stream7
    };
	uint8_t uart_rxdma_request[DRV_UART_PERIPHAL_NUM] = {
        DMA_REQUEST_USART1_RX, DMA_REQUEST_USART2_RX, DMA_REQUEST_USART3_RX, 
		DMA_REQUEST_UART4_RX, DMA_REQUEST_UART5_RX, DMA_REQUEST_USART6_RX, 
        DMA_REQUEST_UART7_RX, DMA_REQUEST_UART8_RX
    };	
    IRQn_Type uart_rxdma_irq[DRV_UART_PERIPHAL_NUM] = {
        DMA2_Stream0_IRQn, DMA2_Stream1_IRQn, DMA2_Stream2_IRQn, DMA2_Stream3_IRQn,
        DMA2_Stream4_IRQn, DMA2_Stream5_IRQn, DMA2_Stream6_IRQn, DMA2_Stream7_IRQn
    };
#else
    DMA_Channel_TypeDef *uart_txdma_channel[DRV_UART_PERIPHAL_NUM] = {
        DMA1_Channel4, DMA1_Channel7, DMA1_Channel2,
    };
    IRQn_Type uart_txdma_irq[DRV_UART_PERIPHAL_NUM] = {
        DMA1_Channel4_IRQn, DMA1_Channel7_IRQn, DMA1_Channel2_IRQn,
    };
    DMA_Channel_TypeDef *uart_rxdma_channel[DRV_UART_PERIPHAL_NUM] = {
        DMA1_Channel5, DMA1_Channel6, DMA1_Channel3,
    };
    IRQn_Type uart_rxdma_irq[DRV_UART_PERIPHAL_NUM] = {
        DMA1_Channel5_IRQn, DMA1_Channel6_IRQn, DMA1_Channel3_IRQn,
    };
#endif  // End With Define DRV_BSP_F4 and DRV_BSP_H7

    obj->attr = *com_attr;
    drv_uart_pinconfig(num, tx_selc, rx_selc);

	switch (num) {
	case 1:	__HAL_RCC_USART1_CLK_ENABLE();	break;
	case 2:	__HAL_RCC_USART2_CLK_ENABLE();	break;
	case 3:	__HAL_RCC_USART3_CLK_ENABLE();	break;
#if (BSP_CHIP_RESOURCE_LEVEL > 1)
	case 4:	__HAL_RCC_UART4_CLK_ENABLE();	break;
	case 5:	__HAL_RCC_UART5_CLK_ENABLE();	break;
	case 6:	__HAL_RCC_USART6_CLK_ENABLE();	break;
	case 7:	__HAL_RCC_UART7_CLK_ENABLE();	break;
	case 8:	__HAL_RCC_UART8_CLK_ENABLE();	break;
#endif // End With Define BSP_CHIP_RESOURCE_LEVEL
	}

	obj->com.Instance = uart_array[num-1];
	obj->com.Init.BaudRate = obj->attr.baudrate;
    obj->com.Init.WordLength = obj->attr.wordlen;
    obj->com.Init.StopBits = obj->attr.stopbitlen;
    obj->com.Init.Parity = obj->attr.parity;
	obj->com.Init.HwFlowCtl = UART_HWCONTROL_NONE;
	obj->com.Init.Mode = UART_MODE_TX_RX;
	HAL_UART_Init(&obj->com);

    if (txdma_attr != NULL) {
        obj->attr_txdma = *txdma_attr;
        __HAL_RCC_DMA1_CLK_ENABLE();
        __HAL_LINKDMA(&obj->com, hdmatx, obj->txdma);
#if defined (DRV_BSP_F4) || defined (DRV_BSP_H7)
        HAL_DMA_DeInit(&obj->txdma);
        obj->txdma.Instance = uart_txdma_stream[num-1];
        obj->txdma.Init.Request = uart_txdma_request[num-1];
        obj->txdma.Init.Direction = DMA_MEMORY_TO_PERIPH;
        obj->txdma.Init.PeriphInc = DMA_PINC_DISABLE;
        obj->txdma.Init.MemInc = DMA_MINC_ENABLE;
        obj->txdma.Init.PeriphDataAlignment = DMA_PDATAALIGN_BYTE;
        obj->txdma.Init.MemDataAlignment = DMA_MDATAALIGN_BYTE;
        obj->txdma.Init.Mode = DMA_NORMAL;
        obj->txdma.Init.Priority = DMA_PRIORITY_MEDIUM;
        obj->txdma.Init.FIFOMode = DMA_FIFOMODE_DISABLE;
        obj->txdma.Init.FIFOThreshold = DMA_FIFO_THRESHOLD_FULL;
        obj->txdma.Init.MemBurst = DMA_MBURST_SINGLE;
        obj->txdma.Init.PeriphBurst = DMA_PBURST_SINGLE;
#else
        obj->txdma.Instance = uart_txdma_channel[num-1];
        obj->txdma.Init.Direction = DMA_MEMORY_TO_PERIPH;
        obj->txdma.Init.PeriphInc = DMA_PINC_DISABLE;
        obj->txdma.Init.MemInc = DMA_MINC_ENABLE;
        obj->txdma.Init.PeriphDataAlignment = DMA_PDATAALIGN_BYTE;
        obj->txdma.Init.MemDataAlignment = DMA_MDATAALIGN_BYTE;
        obj->txdma.Init.Mode = DMA_NORMAL;
        obj->txdma.Init.Priority = DMA_PRIORITY_MEDIUM;
#endif   // End With Define DRV_BSP_F4 and DRV_BSP_H7
        HAL_DMA_Init(&obj->txdma);
        HAL_NVIC_SetPriority(uart_txdma_irq[num-1], txdma_attr->priority, 0);
        HAL_NVIC_EnableIRQ(uart_txdma_irq[num-1]);
    } else {
        obj->attr_txdma.mem_capacity = 0;
    }

    if (rxdma_attr != NULL) {
        obj->attr_rxdma = *rxdma_attr;
#ifdef DMA2
        __HAL_RCC_DMA2_CLK_ENABLE();
#endif
        __HAL_LINKDMA(&obj->com, hdmarx, obj->rxdma);
#if defined (DRV_BSP_F4) || defined (DRV_BSP_H7)
        HAL_DMA_DeInit(&obj->rxdma);
        obj->rxdma.Instance = uart_rxdma_stream[num-1];
        obj->rxdma.Init.Request = uart_rxdma_request[num-1];
        obj->rxdma.Init.Direction = DMA_PERIPH_TO_MEMORY;
        obj->rxdma.Init.PeriphInc = DMA_PINC_DISABLE;
        obj->rxdma.Init.MemInc = DMA_MINC_ENABLE;
        obj->rxdma.Init.PeriphDataAlignment = DMA_PDATAALIGN_BYTE;
        obj->rxdma.Init.MemDataAlignment = DMA_MDATAALIGN_BYTE;
        obj->rxdma.Init.Mode = DMA_NORMAL;
        obj->rxdma.Init.Priority = DMA_PRIORITY_MEDIUM;
        obj->rxdma.Init.FIFOMode = DMA_FIFOMODE_DISABLE;
        obj->rxdma.Init.FIFOThreshold = DMA_FIFO_THRESHOLD_FULL;
        obj->rxdma.Init.MemBurst = DMA_MBURST_SINGLE;
        obj->rxdma.Init.PeriphBurst = DMA_PBURST_SINGLE;
#else
        obj->rxdma.Instance = uart_rxdma_channel[num-1];
        obj->rxdma.Init.Direction = DMA_PERIPH_TO_MEMORY;
        obj->rxdma.Init.PeriphInc = DMA_PINC_DISABLE;
        obj->rxdma.Init.MemInc = DMA_MINC_ENABLE;
        obj->rxdma.Init.PeriphDataAlignment = DMA_PDATAALIGN_BYTE;
        obj->rxdma.Init.MemDataAlignment = DMA_MDATAALIGN_BYTE;
        obj->rxdma.Init.Mode = DMA_NORMAL;
        obj->rxdma.Init.Priority = DMA_PRIORITY_MEDIUM;
#endif   // End With Define DRV_BSP_F4 and DRV_BSP_H7
        HAL_DMA_Init(&obj->rxdma);
        HAL_NVIC_SetPriority(uart_rxdma_irq[num-1], rxdma_attr->priority, 0);
        HAL_NVIC_EnableIRQ(uart_rxdma_irq[num-1]);

        HAL_UART_Receive_DMA(&obj->com, obj->attr_rxdma.mem_buff, obj->attr_rxdma.mem_capacity);
    } else {
        obj->attr_rxdma.mem_capacity = 0;
    }

	HAL_NVIC_SetPriority(uart_irq_array[num-1], obj->attr.priority, 0);
	HAL_NVIC_EnableIRQ(uart_irq_array[num-1]);
	__HAL_UART_ENABLE_IT(&obj->com, UART_IT_IDLE);
	obj->tx_busy = false;

    drv_uart_list[num-1] = obj;
}

int drv_uart_send(struct drv_uart_t *obj, const uint8_t *p, uint16_t len, enum __drv_rwway way)
{
    switch (way) {
    case RWPOLL:
        HAL_UART_Transmit(&obj->com, (uint8_t *)p, len, 3000);
        break;
    case RWIT:
    case RWDMA:
        {
            devbuf_write(&obj->tx_buf, &p[0], len);
            if (obj->tx_busy) return false;
            obj->tx_busy = true;
            if (obj->attr_txdma.mem_capacity != 0) {
                uint16_t bufsize = (uint32_t)devbuf_size(&obj->tx_buf);
                bufsize = (bufsize <= obj->attr_txdma.mem_capacity) ? bufsize : 
                                obj->attr_txdma.mem_capacity;
                devbuf_read(&obj->tx_buf, &obj->attr_txdma.mem_buff[0], bufsize);
#if defined (DRV_BSP_H7)
                SCB_CleanDCache_by_Addr((uint32_t *)&obj->attr_txdma.mem_buff[0],
                                    obj->attr_txdma.mem_capacity);
#endif  // End With Define DRV_BSP_H7
                HAL_UART_Transmit_DMA(&obj->com, &obj->attr_txdma.mem_buff[0], bufsize);
            } else {
                uint16_t bufsize = (uint32_t)devbuf_size(&obj->tx_buf);
                // bug
                HAL_UART_Transmit_IT(&obj->com, &obj->tx_buf.buf[0], bufsize);
            }
            break; 
        }
    default: false;
    }
    return true;
}

void drv_uart_irq(struct drv_uart_t *obj)
{
    if (obj == NULL) return;
	__HAL_UART_DISABLE_IT(&obj->com, UART_IT_ERR);
	__HAL_UART_DISABLE_IT(&obj->com, UART_IT_PE);

	if ((__HAL_UART_GET_FLAG(&obj->com, UART_FLAG_IDLE) != RESET)) {
		__HAL_UART_CLEAR_IDLEFLAG(&obj->com);
#if defined (DRV_BSP_G0) || defined (DRV_BSP_H7)
		uint32_t tmp = obj->com.Instance->ISR;
		tmp = obj->com.Instance->RDR;
#else
		uint32_t tmp = obj->com.Instance->SR;
		tmp = obj->com.Instance->DR;
#endif  // End With Define DRV_BSP_G0 and DRV_BSP_H7
		HAL_UART_AbortReceive(&obj->com);
        
		uint16_t rxlen = obj->attr_rxdma.mem_capacity - __HAL_DMA_GET_COUNTER(obj->com.hdmarx);

#if defined (DRV_BSP_H7)
		/* save SRAM(DMA) data to D-Cache data */
		SCB_InvalidateDCache_by_Addr((uint32_t *)&obj->attr_rxdma.mem_buff[0], 
                                obj->attr_rxdma.mem_capacity);
#endif  // End With Define DRV_BSP_H7
        devbuf_write(&obj->rx_buf, &obj->attr_rxdma.mem_buff[0], rxlen);
		HAL_UART_Receive_DMA(&obj->com, &obj->attr_rxdma.mem_buff[0], 
                                obj->attr_rxdma.mem_capacity);
	}
	
	/* Call HAL function for other UART IRQ (such as TC IRQ and RXNE IRQ) */
	HAL_UART_IRQHandler(&obj->com); 
}

void drv_uart_txdma_irq(struct drv_uart_t *obj)
{
    if (obj == NULL || obj->attr_txdma.mem_capacity == 0) return;
    uint32_t len = devbuf_size(&obj->tx_buf);

    if (len > 0) {
        if(len > obj->attr_txdma.mem_capacity) 
            len = obj->attr_txdma.mem_capacity;
        devbuf_read(&obj->tx_buf, &obj->attr_txdma.mem_buff[0], len);
        obj->tx_busy = true;

#if defined (DRV_BSP_H7)
        /* save SRAM(DMA) data to D-Cache data */
        SCB_InvalidateDCache_by_Addr((uint32_t *)&obj->attr_txdma.mem_buff[0],
                                    obj->attr_rxdma.mem_capacity);
#endif  // End With Define DRV_BSP_H7

        HAL_UART_Transmit_DMA(&obj->com, &obj->attr_txdma.mem_buff[0], len);
    }else {
        obj->tx_busy = false; 
    }
}

void drv_uart_rxdma_irq(struct drv_uart_t *obj)
{
    if (obj == NULL || obj->attr_rxdma.mem_capacity == 0) return;
    HAL_UART_AbortReceive(&obj->com);

#if defined (DRV_BSP_H7)
    /* save SRAM(DMA) data to D-Cache data */
    SCB_InvalidateDCache_by_Addr((uint32_t *)&obj->attr_rxdma.mem_buff[0], 
                                obj->attr_rxdma.mem_capacity);
#endif  // End With Define DRV_BSP_H7

    devbuf_write(&obj->rx_buf, &obj->attr_rxdma.mem_buff[0], obj->attr_rxdma.mem_capacity);
	HAL_UART_Receive_DMA(&obj->com, &obj->attr_rxdma.mem_buff[0], obj->attr_rxdma.mem_capacity);
}
